--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -6,6 +6,9 @@
     <title>Pagina 1</title>
 <link rel="stylesheet" href="../general/assets/css/style.css">
 
+
+
+
 </head>
 <body>
   <div id="container">
@@ -17,7 +20,8 @@
 
     <!--MAIN-->
     <main>
- <h1>Welcome to <span>your exam</span></h1>
+ <h1>Welcome to  <br>
+    <strong>your exam</strong></h1>
 
  <h2>Instructions</h2>
 <p>We don't expect most engineers to now the answer to all of these questions, so don't worry if you're unsure of a few of them.
