--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -39,7 +39,7 @@
     <label>I promise to answer myself without help from anyone</label>
 </form>
 
-<a href="#"><button type="button">PROCEED</button></a>
+<a href="#"><button type="button" id="checkbox">PROCEED</button></a>
 
 </main>
 </div>  
