--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -35,11 +35,11 @@
 </p>
 
 <form>
-    <input type="checkbox">
+    <input type="checkbox"  id="checkbox">
     <label>I promise to answer myself without help from anyone</label>
 </form>
 
-<a href="#"><button type="button" id="checkbox">PROCEED</button></a>
+<a href="#"><button type="button">PROCEED</button></a>
 
 </main>
 </div>  
