--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 1</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="../general/assets/css/style.css">
 
 
@@ -20,8 +21,7 @@
 
     <!--MAIN-->
     <main>
- <h1>Welcome to  <br>
-    <strong>your exam</strong></h1>
+ <h1>Welcome to <strong>your exam</strong></h1>
 
  <h2>Instructions</h2>
 <p>We don't expect most engineers to now the answer to all of these questions, so don't worry if you're unsure of a few of them.
@@ -35,8 +35,14 @@
 </p>
 
 <form>
-    <input type="checkbox"  id="checkbox">
-    <label>I promise to answer myself without help from anyone</label>
+
+    <input type="checkbox" id="myCheckbox" required>  
+    <label for="myCheckbox">
+        
+        
+        I promise to answer myself without help from anyone
+    </label>
+
 </form>
 
 <a href="#"><button type="button">PROCEED</button></a>
