--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -34,18 +34,17 @@
 
 </p>
 
-<form>
+<div id="proceed">
+    <form>
 
     <input type="checkbox" id="myCheckbox" required>  
     <label for="myCheckbox">
-        
-        
         I promise to answer myself without help from anyone
     </label>
+    <a href="#"><button type="button" class="btn">PROCEED</button></a>
+    </form>
+</div>
 
-</form>
-
-<a href="#"><button type="button">PROCEED</button></a>
 
 </main>
 </div>  
