--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -21,18 +21,22 @@
 
     <!--MAIN-->
     <main>
- <h1>Welcome to <strong>your exam</strong></h1>
+ <h1 class="homePage">Welcome to <strong>your exam</strong></h1>
 
- <h2>Instructions</h2>
-<p>We don't expect most engineers to now the answer to all of these questions, so don't worry if you're unsure of a few of them.
+ <div id="instructions">
+    <h2>Instructions</h2>
+    <p>We don't expect most engineers to now the answer to all of these questions, so don't worry if you're unsure of a few of them.</p>
 
-<ul>
-    <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-    <li>Changing browser tab or opening windows will <strong>invalidate the question</strong>.</li>
-    <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-</ul>
+    <ul>
+        <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
+        <li>Changing browser tab or opening windows will <strong>invalidate the question</strong>.</li>
+        <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+    </ul>
 
-</p>
+
+</div>
+
+
 
 <div id="proceed">
     <form>
