--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -59,7 +59,7 @@
             <label for="myCheckbox">
               I promise to answer myself without help from anyone
             </label>
-            <a href="#"><button type="button" class="btn">PROCEED</button></a>
+            <a><button type="button" class="btn">PROCEED</button></a>
           </form>
         </div>
       </main>
