--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -17,7 +17,7 @@
 
 
   <body>
-    <div id="container">
+    <div class="container">
       <!--HEADER-->
       <header>
         <img src="../general/assets/img/epicode_logo.png" alt="logo" />
