--- a/pag4/PAG4_INDEX.html
+++ b/pag4/PAG4_INDEX.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous" />
 <link rel="stylesheet" href="../general/assets/css/style.css">
+
 
 </head>
 <body>
@@ -25,6 +26,19 @@
 <p>From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
 <!--stelline :)-->
 
+
+<div class="rating">
+    <div class="star" data-value="1"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="2"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="3"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="4"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="5"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="6"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="7"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="8"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="9"><i class="fas fa-star"></i></div>
+    <div class="star" data-value="10"><i class="fas fa-star"></i></div>
+</div>
 
 </div>
 
