Pagina 4 modifiche delle 12:08

--- a/pag4/PAG4_INDEX.html
+++ b/pag4/PAG4_INDEX.html
@@ -23,7 +23,7 @@
 <div>
 <h1>Tell us how it's going</h1>
 
-<p>From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
+<p class="pg4">From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
 <!--stelline :)-->
 
 
@@ -43,19 +43,17 @@
 </div>
 
 <div>
-<p>Leave us an open feedback about your experience so far</p>
-
-
+<p class="pg4">Leave us an open feedback about your experience so far</p>
 
 <!-- FEEDBACK JS INPUT-->
-<input type="text" placeholder="Write your comment here">
+<input type="text" class="comment" placeholder="Write your comment here">
 
 </div>
 
 <div>
 
 <!-- BUTTON-->
-<a href="#"><button type="button" class="btn">MORE INFO</button></a>
+<a href="#"><button type="button" class="btn" id="moreInfo">MORE INFO</button></a>
 </div>
 
 
