--- a/pag4/PAG4_INDEX.html
+++ b/pag4/PAG4_INDEX.html
@@ -21,7 +21,7 @@
 <!--MAIN-->
 <main class="main">
 <div>
-<h1>Tell us how it's going</h1>
+<h1 class="title">Tell us how it's going</h1>
 
 <p class="pg4">From 0 to 10, how likely are you to recommend EPICODE to a friend or a colleague?</p>
 <!--stelline :)-->
@@ -53,7 +53,7 @@
 <div>
 
 <!-- BUTTON-->
-<a href="#"><button type="button" class="btn" id="moreInfo">MORE INFO</button></a>
+<a href="https://www.epicode.com"><button type="button" class="btn" id="moreInfo">MORE INFO</button></a>
 </div>
 
 
