--- a/pag 2-3/PAG2_3.html
+++ b/pag 2-3/PAG2_3.html
@@ -20,9 +20,10 @@
 
         <div id="quiz">
 
+            <!-- TIMER -->
             <div id="timer"></div>
 
-            
+            <!--TEST DINAMICO-->
 
             <div id="test">
                 <h1 id="domanda"></h1>
@@ -39,6 +40,7 @@
 
             </div>
 
+            <!-- CONTEGGIO -->
 
             <div id="conteggio"></div>
 
@@ -46,15 +48,22 @@
 
 
       <!--       PAGINA 3    RISULTATI    -->
+
+
       <div id="results">
 
       <h1 id="risultati"></h1>
+
+
+    <!--% RIPOSTE TRUE-->
 
       <div class="esito" id="True">
 
       </div>
 
 
+
+        <!--GRAFICO PROGRESSIVO-->
         <div id="grafico">
 
             <p></p>
@@ -62,10 +71,14 @@
         </div>
 
 
+    <!--% RIPOSTE FALSE-->
+
         <div class="esito" id="False">
         
         </div>
 
+
+        <!--BOTTONE PAG 4-->
 
         <a href="../pag4/PAG4_INDEX.html"><button type="button" class="btn" id="rateUs">RATE US</button></a>
 
