Pagina_2_Codice_per_il_Quiz

--- a/pag 2-3/PAG2_3.html
+++ b/pag 2-3/PAG2_3.html
@@ -15,7 +15,7 @@
         <img src="../general/assets/img/epicode_logo.png" alt="logo" />
       </header>
 
-      <main>
+      <main class="main">
       <!--       PAGINA 2   QUIZ       -->
 
         <div id="quiz">
@@ -37,12 +37,13 @@
                     <button type="submit" class="btnQuiz"></button>
 
                 </div>
+                <!-- CONTEGGIO -->
+
+            <div id="conteggio"></div>
 
             </div>
 
-            <!-- CONTEGGIO -->
-
-            <div id="conteggio"></div>
+            
 
         </div>
 
