--- a/pag 2-3/PAG2_3.html
+++ b/pag 2-3/PAG2_3.html
@@ -25,20 +25,7 @@
 
             <!--TEST DINAMICO-->
 
-            <div id="test">
-                <h1 id="domanda"></h1>
-
-                <!--risposte-->
-
-                <div id="risposte">
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-
-                </div>
-
-            </div>
+      
 
             <!-- CONTEGGIO -->
 
@@ -70,6 +57,23 @@
 
         </div>
 
+            <!-- CASELLE PAGINA 2 -->
+
+<div id="risposte">
+  <button type="submit" class="btnQuiz" id="risposta1">
+      <span class="risposta-content">Risposta A</span>
+  </button>
+  <button type="submit" class="btnQuiz" id="risposta2">
+      <span class="risposta-content">Risposta B</span>
+  </button>
+  <button type="submit" class="btnQuiz" id="risposta3">
+      <span class="risposta-content">Risposta C</span>
+  </button>
+  <button type="submit" class="btnQuiz" id="risposta4">
+      <span class="risposta-content">Risposta D</span>
+  </button>
+</div>
+
 
     <!--% RIPOSTE FALSE-->
 
@@ -80,7 +84,7 @@
 
         <!--BOTTONE PAG 4-->
 
-        <a href="../pag4/PAG4_INDEX.html"><button type="button" class="btn" id="rateUs">RATE US</button></a>
+        <a >QUESTION</a>
 
         </div>
 
@@ -92,5 +96,8 @@
 
 
     <script src="assets/PAG2_3.js"></script>
+
+
+
   </body>
 </html>
