Modifiche-Pagina_2_e_3_+_Calcolo_Risultato

--- a/pag 2-3/PAG2_3.html
+++ b/pag 2-3/PAG2_3.html
@@ -52,35 +52,25 @@
 
 
       <div id="results">
+        <h1 id="risultati">Results</h1>
 
-      <h1 id="risultati"></h1>
+        <p>The Summary of your answers:</p>
 
+        <div id="percentuali">
+          <!--% RIPOSTE TRUE-->
 
-    <!--% RIPOSTE TRUE-->
+          <div class="esito" id="True"></div>
 
-      <div class="esito" id="True">
+          <!--GRAFICO PROGRESSIVO-->
+          <div id="grafico"></div>
 
-      </div>
+          <!--% RIPOSTE FALSE-->
 
-
-
-        <!--GRAFICO PROGRESSIVO-->
-        <div id="grafico">
-
-            <p></p>
-
+          <div class="esito" id="False"></div>
         </div>
-
-
-    <!--% RIPOSTE FALSE-->
-
-        <div class="esito" id="False">
-        
-        </div>
-
 
         <!--BOTTONE PAG 4-->
-
+        <div id="Recensione">
         <a href="../pag4/PAG4_INDEX.html"><button type="button" class="btn" id="rateUs">RATE US</button></a>
 
         </div>
