--- a/pag 2-3/PAG2_3.html
+++ b/pag 2-3/PAG2_3.html
@@ -16,58 +16,57 @@
       </header>
 
       <main class="main">
-      <!--       PAGINA 2   QUIZ       -->
+        <!--       PAGINA 2   QUIZ       -->
 
         <div id="quiz">
+          <!-- TIMER -->
+          <div id="timer"></div>
 
-            <!-- TIMER -->
-            <div id="timer"></div>
+          <!--TEST DINAMICO-->
 
-            <!--TEST DINAMICO-->
+          <div id="test">
+            <h1 id="domanda"></h1>
 
-            <div id="test">
-                <h1 id="domanda"></h1>
+            <!--risposte-->
 
-                <!--risposte-->
-
-                <div id="risposte">
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-                    <button type="submit" class="btnQuiz"></button>
-
-                </div>
-                <!-- CONTEGGIO -->
-
-            <div id="conteggio"></div>
-
+            <div id="risposte">
+              <button type="submit" class="btnQuiz"></button>
+              <button type="submit" class="btnQuiz"></button>
+              <button type="submit" class="btnQuiz"></button>
+              <button type="submit" class="btnQuiz"></button>
             </div>
 
-            
+            <!-- CONTEGGIO -->
 
+            <div id="conteggio"></div>
+          </div>
         </div>
 
+        <!--       PAGINA 3    RISULTATI    -->
 
-      <!--       PAGINA 3    RISULTATI    -->
+        <div id="results">
+          <h1 id="risultati">Results</h1>
 
+          <p>The Summary of your answers:</p>
 
-      <div id="results">
-        <h1 id="risultati">Results</h1>
+          <div id="percentuali">
+            <!--% RIPOSTE TRUE-->
 
-        <p>The Summary of your answers:</p>
+            <div class="esito" id="True"></div>
 
-        <div id="percentuali">
-          <!--% RIPOSTE TRUE-->
+            <div id="barraProgresso">
+            <h3 id="descrizioneEsito"></h3>
+            <!--GRAFICO PROGRESSIVO-->
+            <div id="grafico">
+              
+              <div id="progresso"></div>
+            </div>
+          </div>
 
-          <div class="esito" id="True"></div>
+            <!--% RIPOSTE FALSE-->
 
-          <!--GRAFICO PROGRESSIVO-->
-          <div id="grafico"></div>
-
-          <!--% RIPOSTE FALSE-->
-
-          <div class="esito" id="False"></div>
-        </div>
+            <div class="esito" id="False"></div>
+          </div>
 
         <!--BOTTONE PAG 4-->
         <div id="Recensione">
