--- a/pag1/PAG1_INDEX.html
+++ b/pag1/PAG1_INDEX.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pagina 1</title>
+    <title>Homepage</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -14,22 +14,16 @@
     <link rel="stylesheet" href="../general/assets/css/style.css" />
   </head>
 
-
-
   <body>
     <div class="container">
       <!--HEADER-->
       <header>
         <img src="../general/assets/img/epicode_logo.png" alt="logo" />
-
-
       </header>
 
       <!--MAIN-->
       <main>
         <h1 class="homePage">Welcome to <strong>your exam</strong></h1>
-
-
 
         <div id="instructions">
           <h2>Instructions</h2>
@@ -51,8 +45,6 @@
           </ul>
         </div>
 
-
-
         <div id="proceed">
           <form>
             <input type="checkbox" id="myCheckbox" required />
@@ -64,7 +56,6 @@
         </div>
       </main>
     </div>
-
 
     <script src="assets/script/PAG1_JS.js"></script>
   </body>
